# remote-sandbox-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
remote_sandbox_mcp/: server.py  watchdog_daemon.py  watchdog_service.py  watchdog_store.py
skills/remote-sandbox-script-exec/: SKILL.md
skills/remote-sandbox-script-exec/agents/: openai.yaml
skills/remote-sandbox-script-exec/references/: remote-runbook.md
